# aw-watcher-utilization

./: .gitignore  DEV_SETUP.md  README.md  pyinstaller.spec  pyproject.toml  test.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml
aw_watcher_utilization/: __init__.py  config.py  settings.py  util.py  watcher.py
visualization/: index.html
